--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="" class="btn">Shop Now &#8594;</a>
                 </div>
                 <div class="col-2">
-                    <img src="images/nastuh-abootalebi-yWwob8kwOCk-unsplash.jpg">
+                    <img src="images/banner-1.jpg">
                 </div>
             </div>
 
@@ -50,13 +50,13 @@
             <div class="small-container">
                  <div class="row">
                 <div class="col-3">
-                    <img src="images/an-45-c.jpg.jpeg">
+                    <img src="images/26.jpeg">
                 </div>
                 <div class="col-3">
-                    <img src="images/spider.jpeg">
+                    <img src="images/64.jpeg">
                 </div>
                 <div class="col-3">
-                    <img src="images/closer.jpeg">
+                    <img src="images/2.jpeg">
                 </div>
                  
             </div>
@@ -69,8 +69,8 @@
             <h2 class="title">ALL Products</h2>
             <div class="row">
                 <div class="col-4">
-                    <img src="images/AN-015.jpeg">
-                    <h4>Glass Holder Medium</h4>
+                    <img src="images/1.jpeg">
+                    <h4>35 D Closer (Havey)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -81,8 +81,8 @@
                     <p>BDT: 100</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/blade.jpeg">
-                    <h4>Diamond Saw blade 14"</h4>
+                    <img src="images/2.jpeg">
+                    <h4>35 D Closer (Standard Series)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -93,8 +93,8 @@
                     <p>BDT: 50</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (round).jpeg">
-                    <h4>Double Side Round Tap</h4>
+                    <img src="images/3.jpeg">
+                    <h4>30 D Closer (Small)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -105,8 +105,8 @@
                     <p>BDT: 130</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (stick).jpeg">
-                    <h4>Noton Tape 6*12 Size</h4>
+                    <img src="images/4.jpeg">
+                    <h4>110  Top Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -117,8 +117,8 @@
                     <p>BDT: 70</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/GB 998-590ml (Black).jpeg">
-                    <h4>Guibao 998 Weatherproofing Silicone Sealant</h4>
+                    <img src="images/5.jpeg">
+                    <h4>120 Bottom Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -129,8 +129,8 @@
                     <p>BDT: 80</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/vc closma 35-D havey duty.jpeg">
-                    <h4>VC Closma 35-D Havey Duty</h4>
+                    <img src="images/6.jpeg">
+                    <h4>150 Lock Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -141,8 +141,8 @@
                     <p>BDT: 800</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/vc closma 35-D standard series.jpeg">
-                    <h4>VC Closma 35-D Standard Series</h4>
+                    <img src="images/7.jpeg">
+                    <h4>Door Closer Handle</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -153,8 +153,8 @@
                     <p>BDT: 1080</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/glass door long handle (s.s square black) 2.jpeg">
-                    <h4>Sower Door Handle Black (Square)</h4>
+                    <img src="images/10.jpeg">
+                    <h4>Arman Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -168,8 +168,8 @@
             <div class="title">Up Coming Product</div>
             <div class="row">
                 <div class="col-4">
-                    <img src="images/AN-015.jpeg">
-                    <h4>Glass Holder Medium</h4>
+                    <img src="images/10.jpeg">
+                    <h4>Arman Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -180,8 +180,8 @@
                     <p>BDT: 100</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/blade.jpeg">
-                    <h4>Diamond Saw blade 14"</h4>
+                    <img src="images/14.jpeg">
+                    <h4>Noton Tape</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -192,7 +192,7 @@
                     <p>BDT: 50</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (round).jpeg">
+                    <img src="images/16.jpeg">
                     <h4>Double Side Round Tap</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
@@ -204,8 +204,8 @@
                     <p>BDT: 130</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (stick).jpeg">
-                    <h4>Noton Tape 6*12 Size</h4>
+                    <img src="images/17.jpeg">
+                    <h4>GB 999-590ml</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
