--- a/product details.html
+++ b/product details.html
@@ -35,30 +35,35 @@
 <div class="small-container single-product">
     <div class="row">
         <div class="col-2">
-            <img src="images/AN-015.jpeg" width="100%" id="productImg">
+            <img src="images/1.jpeg" width="100%" id="productImg">
 
             <div class="small-img-row">
                 <div class="small-img-col">
-                    <img src="images/AN-015.jpeg" width="100%" class="small-img">
+                    <img src="images/1-A.jpeg" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="images/AN-015(2).jpeg" width="100%" class="small-img">
+                    <img src="images/1-B.jpeg" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="images/AN-015.jpeg" width="100%" class="small-img">
+                    <img src="images/1-C.jpeg" width="100%" class="small-img">
+                </div>
+                <div class="small-img-col">
+                    <img src="images/1-D.jpeg" width="100%" class="small-img">
                 </div>
             </div>
         </div>
         <div class="col-2">
             <p>Home / Glass</p>
-            <h1>Glass Holder Medium</h1>
+            <h1>35 D Closer (Havey)</h1>
             <h4>BDT: 100</h4>
             <input type="number" value="1">
+            <input type="number" value="size">
             <a href="" class="btn">Add To Cart</a>
             <h3>Product Details</h3>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>Nodel No: VC Closma 35 D</p>
+            <p>Closing force: 30N</p>
+            <p>Door weght capacity upto: 150kg</p>
+            <p>Maximum door size: width: 1200mm & Hight: 2400mm</p>
         </div>
     </div>
 </div>
@@ -76,8 +81,8 @@
 
             <div class="row">
                 <div class="col-4">
-                    <img src="images/AN-015.jpeg">
-                    <h4>Glass Holder Medium</h4>
+                    <img src="images/1.jpeg">
+                    <h4>35 D Closer (Havey)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -88,8 +93,8 @@
                     <p>BDT: 100</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/blade.jpeg">
-                    <h4>Diamond Saw blade 14"</h4>
+                    <img src="images/2.jpeg">
+                    <h4>35 D Closer (Standard Series)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -100,8 +105,8 @@
                     <p>BDT: 50</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (round).jpeg">
-                    <h4>Double Side Round Tap</h4>
+                    <img src="images/3.jpeg">
+                    <h4>30 D Closer (Small)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -112,8 +117,8 @@
                     <p>BDT: 130</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (stick).jpeg">
-                    <h4>Noton Tape 6*12 Size</h4>
+                    <img src="images/4.jpeg">
+                    <h4>110 Top Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -124,8 +129,8 @@
                     <p>BDT: 70</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/GB 998-590ml (Black).jpeg">
-                    <h4>Guibao 998 Weatherproofing Silicone Sealant</h4>
+                    <img src="images/5.jpeg">
+                    <h4>120 Bottom Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -136,8 +141,8 @@
                     <p>BDT: 80</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/vc closma 35-D havey duty.jpeg">
-                    <h4>VC Closma 35-D Havey Duty</h4>
+                    <img src="images/6.jpeg">
+                    <h4>150 Lock Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -148,8 +153,8 @@
                     <p>BDT: 800</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/vc closma 35-D standard series.jpeg">
-                    <h4>VC Closma 35-D Standard Series</h4>
+                    <img src="images/7.jpeg">
+                    <h4>Door Closer Handle</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -160,8 +165,8 @@
                     <p>BDT: 1080</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/glass door long handle (s.s square black) 2.jpeg">
-                    <h4>Sower Door Handle Black (Square)</h4>
+                    <img src="images/10.jpeg">
+                    <h4>Arman Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
