--- a/products.html
+++ b/products.html
@@ -46,9 +46,9 @@
                 </select>
             </div>
             <div class="row">
-                <div class="col-4">
-                    <img src="images/AN-015.jpeg">
-                    <h4>Glass Holder Medium</h4>
+                 <div class="col-4">
+                    <img src="images/1.jpeg">
+                    <h4>35 D Closer (Havey)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -59,8 +59,8 @@
                     <p>BDT: 100</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/blade.jpeg">
-                    <h4>Diamond Saw blade 14"</h4>
+                    <img src="images/2.jpeg">
+                    <h4>35 D Closer (Standard Series)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -71,8 +71,8 @@
                     <p>BDT: 50</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (round).jpeg">
-                    <h4>Double Side Round Tap</h4>
+                    <img src="images/3.jpeg">
+                    <h4>30 D Closer (Small)</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -83,8 +83,8 @@
                     <p>BDT: 130</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/noton tape (stick).jpeg">
-                    <h4>Noton Tape 6*12 Size</h4>
+                    <img src="images/4.jpeg">
+                    <h4>110  Top Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -95,8 +95,8 @@
                     <p>BDT: 70</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/GB 998-590ml (Black).jpeg">
-                    <h4>Guibao 998 Weatherproofing Silicone Sealant</h4>
+                    <img src="images/5.jpeg">
+                    <h4>120 Bottom Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -107,8 +107,8 @@
                     <p>BDT: 80</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/vc closma 35-D havey duty.jpeg">
-                    <h4>VC Closma 35-D Havey Duty</h4>
+                    <img src="images/6.jpeg">
+                    <h4>150 Lock Patch Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -119,8 +119,8 @@
                     <p>BDT: 800</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/vc closma 35-D standard series.jpeg">
-                    <h4>VC Closma 35-D Standard Series</h4>
+                    <img src="images/7.jpeg">
+                    <h4>Door Closer Handle</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -131,8 +131,8 @@
                     <p>BDT: 1080</p>
                 </div>
                 <div class="col-4">
-                    <img src="images/glass door long handle (s.s square black) 2.jpeg">
-                    <h4>Sower Door Handle Black (Square)</h4>
+                    <img src="images/10.jpeg">
+                    <h4>Arman Fitting</h4>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -143,15 +143,15 @@
                     <p>BDT: 500</p>
                 </div>
             </div>
-         <div class="page-btn">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-            <span>&#8594;</span>
-         </div>
+            <div class="page-btn">
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+                <span>&#8594;</span>
+            </div>
              
-    </div>
+        </div>
        
  
  
