--- a/products.html
+++ b/products.html
@@ -170,8 +170,9 @@
                     <p>Office: 2,<br>Mirpur Road, 6/B, Sultana Tower,<br> Kalabagan, Dhaka-1205,<br>Cell: +88 01713-018621</p>
                 </div>
                 <div class="footer-col-3">
-                    <h3>Contact Us In Branch Office</h3>
-                    <p>Office: 2,<br>Mirpur Road, 6/B, Sultana Tower,<br> Kalabagan, Dhaka-1205,</p>
+                     <h3>Contact Us In Show Room</h3>
+                     <p>G7/1,<br>Shajadpur, Gulshan,<br>Dhaka-1212,<br>Cell: +88 01639-670049</p>
+                </div>
                 </div>
             </div>
         </div>
